--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -316,7 +316,7 @@ import { mlConcepts, depthMarkers, zones } from "../data/mlconcepts.js";
           >
             <div class="concept-image-container">
               <img
-                src={`/ml-images/${concept.image}`}
+                src={`/src/assets/${concept.image}`}
                 alt={concept.name}
                 class="concept-image"
                 loading={index < 5 ? "eager" : "lazy"}
