New Topics Added

--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -331,7 +331,7 @@ import { mlConcepts, depthMarkers, zones } from "../data/mlconcepts.js";
       }
     </div>
   </section>
-  <div class="bg-black text-white text-right p-5">Honorable Mentions @<a href="https://neal.fun/deep-sea/" target="_blank" class="text-blue underline hover:text-blue-500">Neal.Fun</a></div>
+  <div class="bg-black min-h-screen text-white p-5">Honorable Mentions @<a href="https://neal.fun/deep-sea/" target="_blank" class="text-blue underline hover:text-blue-500">Neal.Fun</a></div>
 </main>
 
 <script>
