--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -488,7 +488,7 @@ import { mlConcepts, depthMarkers, zones } from "../data/mlconcepts.js";
           >
             <div class="concept-image-container">
               <img
-                src={`/src/assets/${concept.image}`}
+                src={`/${concept.image}`}
                 alt={concept.name}
                 class="concept-image  rounded-lg"
                 loading={index < 5 ? "eager" : "lazy"}
