--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,3 +1,7 @@
+---
+const pageDescription = "Learn how to build accessible, SEO-friendly websites with Astro, focusing on meta descriptions and user experience.";
+---
+
 <!doctype html>
 <html lang="en">
 	<head>
@@ -6,6 +10,7 @@
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<meta name="generator" content={Astro.generator} />
 		<title>DeepTrench</title>
+		<meta name="description" content={pageDescription}>
 	</head>
 	<body>
 		<slot />
