--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -431,26 +431,26 @@ import { mlConcepts, depthMarkers, zones } from "../data/mlconcepts.js";
 <main>
   {/* Hero section: gradient background with navigation and title */}
   <section class="hero-section">
-    {/* Navigation links */}
-    <nav>
-      <a
-        href="https://dharuportfolio.netlify.app/"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Nami
-      </a>
-      <a
-        href="https://abinesh-mathivanan.vercel.app/"
-        target="_blank"
-        rel="noopener noreferrer"
-        >Beens
-      </a>
-    </nav>
-
     {/* Centered title and subtitle */}
     <div class="title-container">
       <h1>The Deep Trench</h1>
-      <h5>by Beens & Nami</h5>
+      <h5>
+        by <span
+          ><a
+            class="hover:underline"
+            href="https://dharuportfolio.netlify.app/"
+            target="_blank"
+            rel="noopener">Beens</a
+          ></span
+        > & <span
+          ><a
+            class="hover:underline"
+            href="https://abinesh-mathivanan.vercel.app/"
+            target="_blank"
+            rel="noopener">Nami</a
+          ></span
+        >
+      </h5>
     </div>
   </section>
 
