--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -20,20 +20,18 @@ function getImageSize(size: string) {
         <span>
           <a
             class="hover:underline"
-            href="https://dharuportfolio.netlify.app/"
+            href="https://abinesh-mathivanan.vercel.app/"
             target="_blank"
-            rel="noopener"
-            >Beens</a
+            rel="noopener">Beens</a
           >
         </span>
         &
         <span>
           <a
             class="hover:underline"
-            href="https://abinesh-mathivanan.vercel.app/"
+            href="https://dharuportfolio.netlify.app/"
             target="_blank"
-            rel="noopener"
-            >Nami</a
+            rel="noopener">Nami</a
           >
         </span>
       </h5>
@@ -44,7 +42,6 @@ function getImageSize(size: string) {
 
   <section class="ocean-section">
     <div class="ocean-container">
-
       <!-- Zone Labels -->
       {
         zones.map((zone) => (
