--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -4,10 +4,11 @@ import { mlConcepts, depthMarkers, zones } from "../data/mlconcepts.js";
 
 // determine sizes for images
 function getImageSize(size: string) {
-  if (size === "large") return { width: 150, height: 150 };
-  if (size === "medium") return { width: 100, height: 100 };
-  return { width: 60, height: 60 };
+  if (size === "large") return { width: 98, height: 98 };
+  if (size === "medium") return { width: 58, height: 58 };
+  return { width: 40, height: 40 }; // small
 }
+
 ---
 
 <main>
