--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -15,6 +15,7 @@ const pageDescription = "Learn how to build accessible, SEO-friendly websites wi
 	</head>
 	<body>
 		<slot />
+		<Analytics/>
 	</body>
 </html>
 
