--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -30,6 +30,12 @@ import Analytics from "@vercel/analytics/astro";
         "url": "https://deep-ml-trench.vercel.app"
       }
     </script>
+<script
+      defer
+	  is:inline
+      src="https://cloud.umami.is/script.js"
+      data-website-id="3109dfdd-45ab-449c-9408-44cca79eb9b1"
+    ></script>
   </head>
   <body>
     <slot />
