--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Analytics from "@vercel/analytics/astro";
+import SpeedInsights from "@vercel/speed-insights/astro";
 ---
 
 <!doctype html>
@@ -33,6 +34,7 @@ import Analytics from "@vercel/analytics/astro";
   </head>
   <body>
     <slot />
+    <SpeedInsights />
     <Analytics />
   </body>
 </html>
