--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -31,12 +31,11 @@ import SpeedInsights from "@vercel/speed-insights/astro";
         "url": "https://deep-ml-trench.vercel.app"
       }
     </script>
-<script
+    <script
       defer
-	  is:inline
+      is:inline
       src="https://cloud.umami.is/script.js"
-      data-website-id="3109dfdd-45ab-449c-9408-44cca79eb9b1"
-    ></script>
+      data-website-id="3109dfdd-45ab-449c-9408-44cca79eb9b1"></script>
   </head>
   <body>
     <slot />
