--- a/src/components/Main.astro
+++ b/src/components/Main.astro
@@ -27,7 +27,7 @@ function getNodeClass(size: string) {
         <span>
           <a
             class="hover:underline"
-            href="https://dharuportfolio.netlify.app/"
+            href="https://dharun-builds.vercel.app/"
             target="_blank"
             rel="noopener">Nami</a
           >
